--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -340,13 +340,14 @@ Command synonyms: `displayscore`, `displayassignment`, `displayassignment`
 [NOTE]
 ====
 ****
+* Not entering the f/DISPLAY_FORMAT will display the graph format by default.
 * When a new student is added/deleted/modified, the assignment will need to be refreshed.
 * i.e you will need to enter the command again to display the updated scores.
 * When displaying the graph format, a short lag may follow.
 ****
 ====
-// end::FeatureDisplayScore
-// tag::FeatureDisplayAssignments
+// end::FeatureDisplayScore[]
+// tag::FeatureDisplayAssignments[]
 === Display tutorial class assignments : `displayAssignments`
 
 Allows user to list out existing assignments in a tutorial.
