--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -432,30 +432,31 @@ change in the user's operating system.
 
 The undo/redo mechanism is facilitated by 4 different components: `CloneModel`,  `State`, `StackManager`, and `UndoableHistoryManager`.
 
-A `CloneModel` is a cloned version of the `Model` class and contains UserPrefs and the the items in `Xpire` and `ReplenishList`.
+A `CloneModel` is a cloned version of the `Model` class and contains `UserPrefs` and the items in `Xpire` and `ReplenishList`.
 
-A `State` represents the status of `Xpire` at that point in history and contains the corresponding `CloneModel`, `ListType` which is the current view of the application, a `XpireMethodOfSorting` which determines how the items in `Xpire` are sorted, as well as a `predicate` that filters items in the current view.
+A `State` represents the status of the application at that point in history and contains the corresponding `CloneModel`, an enum `ListType` which is the current view of the application, a `XpireMethodOfSorting` which determines how the items in `Xpire` are sorted, as well as a `predicate` that filters items in the current view.
 
 The undo/redo mechanism is also supported by a `StackManager` which stores internally all the states and +
 decides when to pop or clear, depending on the command.
-There are two stacks that are stored in StackManager internally, the Undo and the Redo Stacks.
-The Undo stack is a double-ended Queue (`ArrayDeque`) which simulates as a stack whilst the Redo stack is a `Stack`. Both classes are imported from java.util.
-These stacks are initialised and cleared upon beginning/ending every session of the application.
+There are two stacks that are stored in StackManager internally, the UndoStack and the RedoStack.
+The UndoStack is a `ArrayDeque` class, a double-ended queue which can simulate as a stack whilst the RedoStack is of the `Stack` class. Both classes are imported from java.util.
+These stacks are initialised and cleared upon the beginning and ending of every session of the application.
 
 [NOTE]
-Currently, the undo/redo mechanism only supports up to 10 undo commands. This is enforced in order to save memory by not storing too many states in one session which may slow down the application. +
-Consequently, this implementation would mean that the Undo Stack has to drop the first state from the front if there are already 10 states store, thus influencing the design of the two stacks. +
+Currently, the undo/redo mechanism only supports up to 10 previous commands. This is enforced in order to save memory by not storing too many states in one session which may slow down the application.
+
+As the UndoStack can only contain a maximum of 10 states, the UndoStack has to drop the first state from the front if there are already 10 states stored, thus influencing the design of the two stacks. +
 Therefore, an double-ended queue was used to replicate a Stack as it supports O(1) deleting operations from the front.
 
 The `UndoableHistoryManager` is a generic class that stores inputs as well as Commands so that Undo/Redo commands are able to feedback to the user what commands have been undone or redid.
 
 At every command (besides `undo`/`redo`/`help`/`exit`/`export`/`tag (show)`, the state is stored internally. +
-When an undo command is executed, it will pop the previous state and update the model via `update`. +
-The state that was undid will then be pushed into the Redo stack, should the user types in a redo command.
+When an `undo` command is executed, it will pop the previous state and update the model via `update`. +
+The state that was undid will then be pushed into the RedoStack, should the user types in a `redo` command.
 
 Given below is an example usage scenario and how the undo/redo mechanism behaves at each step.
 
-Step 1. The user launches the application for the first time. The two internal stacks in `StackManager` will be initialised. Both stacks should be empty as there are no previous commands by the user. The current state is s0, the initial state of `Xpire`.
+Step 1. The user launches the application for the first time. The two internal stacks in `StackManager` will be initialised. Both stacks should be empty as there are no previous commands by the user. The current state is s0, the initial state of the application.
 
 Step 2. The user executes `delete|5` command to delete the 5th item in `Xpire`. The `delete` will then save the previous state, s0, by pushing it into the Undo Stack. The current state will be the new state `s1` that has the 5th item in `Xpire` deleted.
 
@@ -463,14 +464,14 @@ Step 2. The user executes `delete|5` command to delete the 5th item in `Xpire`. 
 
 image::UndoRedo/UndoRedoStep1and2.png[width="790"]
 
-Step 3. The user executes `add|Apple|30/10/2019|3` to add a new item. Similar to Step 2, The `add` command will then save the previous state, s1 by pushing it into the Undo Stack. The current state will be the new state `s2` with the item Apple added.
+Step 3. The user executes `add|Apple|30/10/2019|3` to add a new item. Similar to Step 2, The `AddCommand` will then save the previous state, s1, by pushing it into the UndoStack. The current state will be the new state `s2` with the item Apple added.
 
 [NOTE]
-If a command fails its execution, it will not save the previous state, thus the state will not be pushed into the Undo Stack.
+If a command fails its execution, it will not save the previous state, thus the state will not be pushed into the UndoStack.
 
-Step 4. The user now decides that adding the item was a mistake, and decides to undo that action by executing the `undo` command. The `undo` command will then update the current model with the model in the previous state.
+Step 4. The user now decides that adding the Apple item earlier on was a mistake, and decides to undo that action by executing the `undo` command. The `undo` command will then update the current model with the model in the previous state.
 
-Internally within StackManager, the most recent state, s1, will be popped from the Undo Stack to become the current state. At the same time, s2, the new state with the added item, will be pushed into the Redo Stack.
+Internally within StackManager, the most recent state, s1, will be popped from the UndoStack to become the current state. At the same time, s2, the new state with the added item, will be pushed into the RedoStack.
 
 .Step 3 & Step 4
 
@@ -479,24 +480,22 @@ image::UndoRedo/UndoRedoStep3and4.png[width="790"]
 [NOTE]
 If there are no commands to undo (e.g. at the start of a new Xpire session), undo will return an Error to the user instead. This is done by checking whether the UndoStack is empty.
 
-The following sequence diagram shows how the undo operation works:
+The following sequence diagram shows how the `undo` operation works:
 
 image::UndoRedo/UndoSequenceDiagram.png[width="790"]
 
-NOTE: The lifeline for `UndoCommand` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
-
-The `redo` command does the opposite -- It will pop the latest state from the Redo Stack and set it as the current state whilst pushing the current state into the Undo Stack.
+The `redo` command does the opposite -- It will pop the latest state from the Redo Stack and set it as the current state whilst pushing the current state into the UndoStack.
 
 [NOTE]
-Similarly, if there are no commands to redo, redo will return an Error to the user. This is done by checking if the Redo Stack is empty.
+Similarly, if there are no commands to redo, `redo` will return an Error to the user. This is done by checking if the RedoStack is empty.
 
-From Step 4, there are 3 scenarios which showcases the behaviour of StackManager after an Undo Command has been executed.
+From Step 4, there are 3 scenarios which showcases the behaviour of `StackManager` after an Undo command has been executed.
 
-Step 5a. The user suddenly decides that he should not have undid the previous AddCommand, thus he wants to redo the action. This is done by inputting 'redo' in Xpire.
+Step 5a. The user suddenly decides that he should not have undid the previous Add command, thus he wants to redo the action. This is done by inputting 'redo' in Xpire.
 
-Within Stack Manager, the current state will be the popped state, s2, from the Redo Stack. The current state, s1, will then be pushed back into the Undo Stack. The current states and their locations should be the same as after the execution of the Add command in Step 3.
+Within `StackManager`, the current state will be the popped state, s2, from the RedoStack. The current state, s1, will then be pushed back into the UndoStack. The current states and their locations should be the same as after the execution of the `AddCommand` in Step 3.
 
-Step 5b. The user decides to further undo his actions, which now includes the first Delete command. The initial state, s0, will then be popped from the Undo Stack and set as the current state. The current state, s1, will then be pushed into the Redo Stack.
+Step 5b. The user decides to further undo his actions, which now includes the first `DeleteCommand`. The initial state, s0, will then be popped from the UndoStack and set as the current state. The current state, s1, will then be pushed into the RedoStack.
 
 .Step 5a & Step 5b
 
@@ -504,16 +503,16 @@ image::UndoRedo/UndoRedoStep5aand5b.png[width="790"]
 
 Step 5c. The user may also decide to execute some other command (which is the most likely scenario) other than Undo/Redo. For instance, the user inputs `tag|2|#Fruit`.
 
-When this happens, the existing states in the Redo Stack will be cleared. The state s1, will then be pushed into the Undo Stack whilst the current state will be the new state s3 that includes the new Tag command.
+When this happens, the existing states in the RedoStack will be cleared. The state s1, will then be pushed into the UndoStack whilst the current state will be the new state s3 that includes the new `TagCommand`.
 
 .Step 5c
 
 image::UndoRedo/UndoRedoStep5c.png[width="790"]
 
-[PROPOSED] [v2.0] A CommandHistory that is integrated and allows users to fast-forward or go back in time to a state/version of the application instantly, as well as view the changes for each item instantly.
+//[PROPOSED] [v2.0] A CommandHistory that is integrated and allows users to fast-forward or go back in time to a state/version of the application instantly, as well as view the changes for each item instantly.
 
 [NOTE]
-Not all commands will save states to StackManager. Exit and Help commands will not save states. Undo and Redo commands should only act on commands that update the items or change the view of the items to the user.
+Not all commands will save states to `StackManager`. `exit` and `help` commands will not save states. `UndoCommand` and `RedoCommand` should only act on commands that update items or change the view of the list of items to the user.
 
 The following activity diagram summarises what happens when a user executes a new command:
 
@@ -522,13 +521,13 @@ image::UndoRedo/ActivityDiagramUndoRedoCommand.png[width="790"]
 
 ==== Design Considerations
 
-The following class diagram shows the entirety of the Undo/Redo system and its associations.
+The following class diagram shows the entirety of the undo/redo mechanism and its associations.
 
 image::UndoRedo/UndoRedoSystemClassDiagram.png[width="790"]
 
 There are two classes that inherit from the abstract class `State` which are `FilteredState` and `ModifiedState`. +
-The states that are stored at each valid and undoable command depends on the type of command itself as `FilteredState` only copies over the predicate and method of sorting but not the backend Xpire or ReplenishList data. Thus, commands that do not alter Items such as `Sort` and `Check` commands will instantiate a `FilteredState`. +
-On the other hand, `ModifiedState` is created with commands that alters the item of the data, thus a new Xpire and ReplenishList will be stored within the state. Commands that instantiate a `ModifiedState` include Add, Tag and Delete commands.
+The states that are stored at each valid and undoable command depends on the type of command itself as `FilteredState` only copies over the predicate and method of sorting but not the backend `Xpire` or `ReplenishList` data. Thus, commands that do not alter items such as `SortCommand` and `CheckCommand` commands instantiate a `FilteredState`. +
+On the other hand, `ModifiedState` is created with commands that alters the item of the data, thus new `Xpire` and `ReplenishList` objects will be stored within the state. Commands that instantiate a `ModifiedState` include `AddCommand`, `TagCommand` and `DeleteCommand`.
 
 ===== Aspect: How undo & redo executes
 
@@ -536,18 +535,18 @@ On the other hand, `ModifiedState` is created with commands that alters the item
 ** Pros: Easy to implement.
 ** Cons: May have performance issues in terms of memory usage, need to have a limit for the amount of states that we can save.
 * **Alternative 2:** Individual command knows how to undo/redo by itself.
-** Pros: Will use less memory (e.g. for `delete`, just save the item being deleted and apply the reverse command which is `add`).
+** Pros: Will use less memory (e.g. for `DeleteCommand`, just save the item being deleted and apply the corresponding reverse command which is and `AddCommand`).
 ** Cons: Ensure that the implementation of each individual command are correct. +
-Hard to do when we are applying stackable search/sort commands.
+Hard to do when applying stackable `SearchCommand` and `SortCommand` as the `predicate` and XpireMethodOfSorting needs to be updated properly.
 
 ===== Aspect: Data structure to support the undo/redo commands
 
 * **Alternative 1 (current choice):** Use a stack to store the different commands and states.
 ** Pros: Easy for new Computer Science student undergraduates to understand, who are likely to be the new incoming developers of our project.
-** Cons: Logic is duplicated twice. For example, when a new command is executed, we must remember to update the filtered list shown to the user and the backend Xpire/ReplenishList data.
+** Cons: Logic is duplicated twice. For example, when a new command is executed, we must remember to update the filtered list shown to the user and the backend `Xpire`/`ReplenishList` data.
 * **Alternative 2:** Use `HistoryManager` for undo/redo that stores previous versions of Item/XpireItem
 ** Pros: We do not need to maintain a separate list, and just reuse what is already in the codebase.
-** Cons: Requires Item/XpireItem to have a history of its edits. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` and each `Item` now needs to do two different things which is to store data and retrieve the previous versions.
+** Cons: Requires `Item`/`XpireItem` to have a history of its edits. Violates Single Responsibility Principle and Separation of Concerns as each `Item` now needs to do two different things which is to store data and know its previous edited versions.
 // end::undoredo[]
 
 // tag::dataencryption[]
