Add Loan Docs and JsonFiles

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -610,7 +610,10 @@ describes the behaviour of `DeleteTransactionCommand` at each step:
 
 === Repeaters
 
-// tag::repeateradd[]
+
+
+
+ tag::repeateradd[]
 ==== Adding Repeater : `add`
 
 ===== Overview
@@ -630,15 +633,18 @@ The `addrep` command is facilitated by the Logic and Model components of the app
 *Step 5*: `LogicManager` uses `AddRepeaterCommand#execute()` to add the `Repeater` and the associated ``Transaction``s into the `Model` which is handled by `ModelManager`. In doing so, it also fetches the `RepeaterUniqueId` counter tracked by the `Model`, sets it as the created ``Repeater``'s unique id, and increments the counter in the `Model` by 1.
 
 *Step 6*: `AddRepeaterCommand` returns a `CommandResult` to the `LogicManager` which is returned back to the user.
-// end::repeateradd[]
 
-// tag::repeaterdelete[]
+ end::repeateradd[]
+
+
+ tag::repeaterdelete[]
 ==== Deleting Repeater : `delete`
 
 ===== Overview
 This feature allows the user to delete repeater in IchiFund. Delete a repeater also deletes the transactions associated with the deleted repeater.
 
 ===== Implementation
+
 The `delrep` command is facilitated by the Logic and Model components of the application. Given below is an example usage scenario of how `delrep` behaves at each step.
 
 *Step 1*: The user executes `delrep 2` to delete the repeater in the 2nd index.
@@ -652,7 +658,10 @@ The `delrep` command is facilitated by the Logic and Model components of the app
 *Step 5*: `LogicManager` uses `DeleteRepeaterCommand#execute()` to delete the `Repeater` and the associated ``Transaction``s from the `Model` which is handled by `ModelManager`.
 
 *Step 6*: `DeleteRepeaterCommand` returns a `CommandResult` to the `LogicManager` which is returned back to the user.
-// end::repeaterdelete[]
+
+ end::repeaterdelete[]
+
+
 
 === Budget
 
@@ -779,87 +788,51 @@ When the user input the `balance` command in the Analytics tab, the following ch
 7. The model is updated with the `List` of `Data` from the newly created `TrendReport`.
 // end::analyticsbalance[]
 
-=== [Demo] Use this as template for your section
-==== Proposed Implementation
-===== Test
+=== Loans
 
-The undo/redo mechanism is facilitated by `VersionedAddressBook`.
-It extends `AddressBook` with an undo/redo history, stored internally as an `addressBookStateList` and `currentStatePointer`.
-Additionally, it implements the following operations:
+// tag::loanadd[]
+==== Adding Loan : `add`
 
-* `VersionedAddressBook#commit()` -- Saves the current address book state in its history.
-* `VersionedAddressBook#undo()` -- Restores the previous address book state from its history.
-* `VersionedAddressBook#redo()` -- Restores a previously undone address book state from its history.
+===== Overview
+This feature allows the user to add a loan in IchiFund. Adding a loan also creates the default values associated with the added loan.
 
-These operations are exposed in the `Model` interface as `Model#commitAddressBook()`, `Model#undoAddressBook()` and `Model#redoAddressBook()` respectively.
+===== Implementation
+The `add` command is facilitated by the Logic and Model components of the application. Given below is an example usage scenario of how `add` behaves at each step.
 
-Given below is an example usage scenario and how the undo/redo mechanism behaves at each step.
+*Step 1*: The user executes `add a/42.15 d/Utilities sd/1 sm/1 sy/2019 ed/31 em/12 ey/2019` to add a loan for utilities with an amount of $42.15 taken on 1st January 2019 and to be returned on 31st December 2019.
 
-Step 1. The user launches the application for the first time. The `VersionedAddressBook` will be initialized with the initial address book state, and the `currentStatePointer` pointing to that single address book state.
+*Step 2*: `LogicManager` uses `IchiFundParser#parserCommand()` to parse the input from the user.
 
-image::UndoRedoState0.png[]
+*Step 3*: `IchiFundParser` determines which command is being used and creates the respective `AddLoanCommandParser` parser with the user's input as an argument.
 
-Step 2. The user executes `delete 5` command to delete the 5th person in the address book. The `delete` command calls `Model#commitAddressBook()`, causing the modified state of the address book after the `delete 5` command executes to be saved in the `addressBookStateList`, and the `currentStatePointer` is shifted to the newly inserted address book state.
+*Step 4*: `AddLoanCommandParser` does a validation check on the user's input before creating and returning an `AddLoanCommand` with desired `Loan` as an argument.
 
-image::UndoRedoState1.png[]
+*Step 5*: `LogicManager` uses `AddLoanCommand#execute()` to add the `Loan` and the associated ``Loan``s into the `Model` which is handled by `ModelManager`. In doing so, it also fetches the `LoanId` counter tracked by the `Model`, sets it as the created ``Repeater``'s unique id, and increments the counter in the `Model` by 1.
 
-Step 3. The user executes `add n/David ...` to add a new person. The `add` command also calls `Model#commitAddressBook()`, causing another modified address book state to be saved into the `addressBookStateList`.
+*Step 6*: `AddRepeaterCommand` returns a `CommandResult` to the `LogicManager` which is returned back to the user.
+// end::repeateradd[]
 
-image::UndoRedoState2.png[]
+// tag::payloan[]
+==== Paying Loan : `pay`
 
-[NOTE]
-If a command fails its execution, it will not call `Model#commitAddressBook()`, so the address book state will not be saved into the `addressBookStateList`.
+===== Overview
+This feature allows the user to pay off a marked loan in IchiFund by index.
 
-Step 4. The user now decides that adding the person was a mistake, and decides to undo that action by executing the `undo` command. The `undo` command will call `Model#undoAddressBook()`, which will shift the `currentStatePointer` once to the left, pointing it to the previous address book state, and restores the address book to that state.
+===== Implementation
+The `pay` command is facilitated by the Logic and Model components of the application. Given below is an example usage scenario of how `pay` behaves at each step.
 
-image::UndoRedoState3.png[]
+*Step 1*: The user executes `pay 2` to pay off the loan in the 2nd index.
 
-[NOTE]
-If the `currentStatePointer` is at index 0, pointing to the initial address book state, then there are no previous address book states to restore. The `undo` command uses `Model#canUndoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the undo.
+*Step 2*: `LogicManager` uses `IchiFundParser#parserCommand()` to parse the input from the user.
 
-The following sequence diagram shows how the undo operation works:
+*Step 3*: `IchiFundParser` determines which command is being used and creates the respective `PayLoanCommandParser` parser with the user's input as an argument.
 
-image::UndoSequenceDiagram.png[]
+*Step 4*: `PayLoanCommandParser` does a validation check on the user's input before creating and returning an `PayLoanCommand` with desired `Index` as an argument.
 
-NOTE: The lifeline for `UndoCommand` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
+*Step 5*: `LogicManager` uses `PayLoanCommand#execute()` to delete the `Loan` from the `Model` which is handled by `ModelManager`.
 
-The `redo` command does the opposite -- it calls `Model#redoAddressBook()`, which shifts the `currentStatePointer` once to the right, pointing to the previously undone state, and restores the address book to that state.
-
-[NOTE]
-If the `currentStatePointer` is at index `addressBookStateList.size() - 1`, pointing to the latest address book state, then there are no undone address book states to restore. The `redo` command uses `Model#canRedoAddressBook()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the redo.
-
-Step 5. The user then decides to execute the command `list`. Commands that do not modify the address book, such as `list`, will usually not call `Model#commitAddressBook()`, `Model#undoAddressBook()` or `Model#redoAddressBook()`. Thus, the `addressBookStateList` remains unchanged.
-
-image::UndoRedoState4.png[]
-
-Step 6. The user executes `clear`, which calls `Model#commitAddressBook()`. Since the `currentStatePointer` is not pointing at the end of the `addressBookStateList`, all address book states after the `currentStatePointer` will be purged. We designed it this way because it no longer makes sense to redo the `add n/David ...` command. This is the behavior that most modern desktop applications follow.
-
-image::UndoRedoState5.png[]
-
-The following activity diagram summarizes what happens when a user executes a new command:
-
-image::CommitActivityDiagram.png[]
-
-==== Design Considerations
-
-===== Aspect: How undo & redo executes
-
-* **Alternative 1 (current choice):** Saves the entire address book.
-** Pros: Easy to implement.
-** Cons: May have performance issues in terms of memory usage.
-* **Alternative 2:** Individual command knows how to undo/redo by itself.
-** Pros: Will use less memory (e.g. for `delete`, just save the person being deleted).
-** Cons: We must ensure that the implementation of each individual command are correct.
-
-===== Aspect: Data structure to support the undo/redo commands
-
-* **Alternative 1 (current choice):** Use a list to store the history of address book states.
-** Pros: Easy for new Computer Science student undergraduates to understand, who are likely to be the new incoming developers of our project.
-** Cons: Logic is duplicated twice. For example, when a new command is executed, we must remember to update both `HistoryManager` and `VersionedAddressBook`.
-* **Alternative 2:** Use `HistoryManager` for undo/redo
-** Pros: We do not need to maintain a separate list, and just reuse what is already in the codebase.
-** Cons: Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things.
-// end::undoredo[]
+*Step 6*: `PayLoanCommand` returns a `CommandResult` to the `LogicManager` which is returned back to the user.
+// end::payloan[]
 
 === Logging
 
