Add UG for clear and delete command (#266)
* DG update

* UG

* Fix

* Fix

* Fix

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -620,6 +620,23 @@ Example:
 
 // end::mark[]
 
+// tag::delete[]
+=== Deleting a person : `delete`
+
+If you want to delete a person in ORGANice, you can type in a command of the following format: `delete **NRIC**`  +
+ORGANice will prevent you from deleting a person if he/she is any of the following:
+
+* A patient whose status is currently under processing.
+* A donor whose status is currently under processing.
+* A doctor who is in charge of one or more patients in ORGANice.
+
+Here is an example. If you want to delete a patient with the NRIC S4612296H and is not under processing, type the following command: `delete S4612296H`.
+
+// end::delete[]
+=== Clearing all entries : `clear`
+
+You can clear all data in ORGANice by typing `clear`. You could use this command to remove all dummy data after you have familiarized yourself with how ORGANice works.
+
 === Exiting the program : `exit`
 
 To exit ORGANice, type `exit` in the Command Box. ORGANice will close on its own.
