--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -25,7 +25,7 @@ IchiFund is a financial tracking application that manages transactions, loans, a
 
 Shown below is the GUI of IchiFund:
 
-image::Ui.png[]
+image::Ui.png[align="center"]
 
 This document serves to give an introduction to the architecture of IchiFund for developers who wish to
 modify the software, or simply to understand how it works. We describe the high-level architecture, and also delve into
@@ -143,8 +143,6 @@ The `Model`,
 * exposes unmodifiable lists (e.g. `ObservableList<Transaction>`) that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
 * does not depend on any of the other three components.
 
-image:ModelClassDiagram.png[]
-
 [[Design-Storage]]
 === Storage Component
 
@@ -195,6 +193,7 @@ well as the `FeatureParser` that is currently in use.
 
 This is illustrated in the object diagram below:
 
+.Object Diagram for Parser Classes in IchiFund
 image::ParserObjectDiagram.png[]
 
 When `IchiFundParser` parses a command, it first checks whether it is a global command (e.g. `help`, `exit`).
@@ -234,6 +233,7 @@ When `handleShowTransaction()` is called, `currentFeatureParser` in `IchiFundPar
 
 The control flow of `handleShowTransaction()` is illustrated with more details in the sequence diagram below:
 
+.Sequence Diagram for changing `FeatureParser`
 image::SetFeatureParserSequenceDiagram.png[]
 
 As the different `FeatureParser` objects have different values for `tabIndex`, a different
@@ -315,6 +315,7 @@ The transactions in IchiFund are represented using the `Transaction` class. Whil
 objects of the `Transaction` class are immutable in the internal structure. The following class diagram summarizes
 the details of the `Transaction` class:
 
+.Class Diagram from Transactions Model
 image::TransactionClassDiagram.png[]
 
 [NOTE]
@@ -324,13 +325,11 @@ two unique string values, `"in"` for income and `"exp"` for expenditure in the c
 In addition, the list of transactions is subject to a filter created by an immutable `TransactionContext`.
 `TransactionContext` keeps track of the `Month`, `Year`, `Category` (optional) and `TransactionType` (optional) in the current filter.
 Naturally, this implies that a filter for `Month` and `Year` is always applied to the list of transactions.
-We defer the demonstration of how `TransactionContext` is used to filter the list of transactions to <<filtertx>>
-
 The `TransactionContext` is also used to fill in optional fields that are not specified by the user when adding transactions.
-In <<addtx>>, we demonstrate how this is implemented.
 
 We summarise the role of the `TransactionContext` class in the following conceptual class diagram:
 
+.Conceptual Class Diagram of `TransactionContext`
 image::TransactionContextOodm.png[]
 
 ===== Design Considerations
@@ -361,7 +360,7 @@ Developers, however, are welcome to implement an additional `Tags` field for `Tr
 for multiple associations.
 
 ====== Differentiating between Income and Expenditure
-Currently, we differentiate transactions that are income items and expenditure items using the `TransactionType` field in
+Currently, we differentiate income items from expenditure items using the `TransactionType` field in
 `Transaction`. We considered the natural alternative of using inheritance as well.
 
 [cols="40%, 60%", options='header']
@@ -413,6 +412,8 @@ in the following chain of events:
 *Step 5*: `ModelManager` filters the list of transactions using the `Predicate<Transaction>`.
 
 The above sequence of events is shown in greater detail in the following sequence diagram:
+
+.Sequence Diagram for `FilterTransactionCommand`
 image::FilterTransactionSequenceDiagram.png[]
 // end::transfilter[]
 
@@ -447,14 +448,15 @@ The execution of an `AddTransactionCommand` results in the following sequence of
 
 *Step 6*: `ModelManager` updates `TransactionContext` such that the new `Transaction` is shown.
 
-When generating a new `Transaction`, `AddTransactionCommand` fills in the missing optional arguments by using
-values obtained from `TransactionContext`, or default values. This is illustrated in the following activity diagram:
+To create a new `Transaction`, `AddTransactionCommand` fills in the missing arguments using
+values obtained from `TransactionContext`, or default values. This is illustrated in the activity diagram below:
 
+.Activity Diagram for Optional Arguments in `AddTransactionCommand`
 image::AddTransactionActivityDiagram.png[]
 
 The above activity diagram shows the decision flow for a general optional argument. However, some optional
-arguments are never stored in `TransactionContext`, and some are always stored in `TransactionContext`. The
-following table describes the particular details for each optional argument, including the default values.
+arguments are never stored in `TransactionContext`, and some are always stored. The
+following table describes the particular details for each optional argument.
 
 [cols="20%, 38%, 42%", options='header']
 |====
